<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/dp_16"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            style="@style/TextView.Bold.16.Black"
            android:textColor="@color/secondaryColor"
            android:text="@string/create_your_account"
            android:textSize="@dimen/sp_22"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProfile"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_120"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintHorizontal_bias="0"
            app:srcCompat="@drawable/img_create_account"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:text="@string/fullname"
            android:textColor="@color/secondaryColor"
            style="@style/TextView.Bold.16.Black"
            app:layout_constraintTop_toBottomOf="@id/ivProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:hint="@string/e_g_jhon_doe"
            android:imeOptions="actionNext"
            android:inputType="text"
            style="@style/TextView.Regular.14.Black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tvFullName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/email"
            android:textColor="@color/secondaryColor"
            style="@style/TextView.Bold.16.Black"
            app:layout_constraintTop_toBottomOf="@id/edFullName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:hint="@string/e_g_jhon_gmail_com"
            android:imeOptions="actionNext"
            style="@style/TextView.Regular.14.Black"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/password"
            android:textColor="@color/secondaryColor"
            style="@style/TextView.Bold.16.Black"
            app:layout_constraintTop_toBottomOf="@id/edEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:hint="@string/e_g_jhon_123"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            style="@style/TextView.Regular.14.Black"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tvPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCreate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextView.Bold.16.Black"
            android:textColor="@color/white"
            android:background="@drawable/bg_rounded_8"
            android:text="@string/create_account"
            android:layout_marginTop="@dimen/dp_32"
            app:layout_constraintTop_toBottomOf="@id/edPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            style="@style/TextView.Regular.14.Black"
            app:layout_constraintVertical_bias="0"
            android:text="@string/already_have_an_account_log_in"
            app:layout_constraintTop_toBottomOf="@id/btnCreate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>